manifests/n2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: default
  labels:
    app: web-app
spec:
  port: "80"
  selector:
    app: web-app
  ports:
    - port: 80
      protocol: TCP
  type: ClusterIP
