manifests/service-1773569996680.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1773569996680
  namespace: default
  labels:
    app: service
spec:
  selector:
    app: deployment
  ports:
    - port: 80
      protocol: TCP
  type: ClusterIP
