manifests/ingress-1773569061330.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1773569061330
  namespace: default
  labels:
    app: ingress
spec:
  rules:
    - host: example.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
